--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>
 		</header>
 		<main>
-			<div class="blockTwo">
+			<div id="blockTwo" class="blockTwo">
 				<div class="twoBlockImg">
 					<image class="animal" src="img/chickenN.png"></image>
 					<image class="corm" src="img/cormChick.png"></image>
@@ -718,5 +718,6 @@
 		<script src="index.js"></script>
 		<script src="butSel.js"></script>
 		<script src="calc.js"></script>
+		<script src="mouse.js"></script>
 	</body>
 </html>
