--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/mobile.css">
 	</head>
 	<body>
 		<header>			
@@ -62,8 +63,10 @@
 					Высококачественный сбалансированный комбикорм, содержащий суточную потребность
                  	в питательных веществах, обеспечивает здоровье животных и птиц, повышает эффективность хозяйства.
                 </p>
+                <div class="btnHead">
 				<button class="payHead">Где купить</button>
 				<button class="calcHead">Калькулятор</button>
+			</div>
 			</div>
 		</header>
 		<main>
@@ -718,6 +721,6 @@
 		<script src="index.js"></script>
 		<script src="butSel.js"></script>
 		<script src="calc.js"></script>
-		<script src="mouse.js"></script>
+		<!--<script src="mouse.js"></script>-->
 	</body>
 </html>
