--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                  	в питательных веществах, обеспечивает здоровье животных и птиц, повышает эффективность хозяйства.
                 </p>
                 <div class="btnHead">
-				<button class="payHead">Где купить</button>
-				<button class="calcHead">Калькулятор</button>
+				<a href="#"><button class="payHead">Где купить</button></a>
+				<a href="#blockFour"><button class="calcHead">Калькулятор</button></a>
 			</div>
 			</div>
 		</header>
@@ -130,7 +130,7 @@
 						<p class="infoTwoP">
 						«Мегакорм» обеспечивает высокую продуктивность птиц и темпы роста, так как содержит весь необходимый комплекс витаминов и микроэлементов, оптимальный для бройлеров.
 						</p>
-						<button class="payHead">Рассчитать</button>
+						<a href="#blockFour"><button class="payHead">Рассчитать</button></a>
 						<div class="divTab" id="divTab">
 							<button id="close-btn"></button>
 						<div class="tabInfo">
@@ -395,31 +395,31 @@
 					<image src="img/blockThreed/chiken.webp" width="200px"></image>
 					<h4>Легко купить. Легко использовать </h4>
 					<p>Выпускается в удобной упаковке. Доступен в большинстве регионов  с доставкой. </p>
-					<button>
+					<a href="#"><button>
 						<image id="img-b" src="img/blockThreed/map.png"></image>
 						<p>Карта дистрибьютеров</p>
 						<image id="img-btn" src="img/blockThreed/btn.png"></image>
-					</button>
+					</button></a>
 				</div>
 				<div id="blockCow">
 					<image src="img/blockThreed/cow.webp" width="200px"></image>
 					<h4>Просто добиться результата</h4>
 					<p>Состав каждого продукта соответствует биологическим потребностям конкретного вида животных. Повышенный иммунитет, сохранение и прирост поголовья – вот результат. </p>
-					<button>
+					<a href="#blockFour"><button>
 						<image id="img-b" src="img/blockThreed/calc.png"></image>
 						<p>Рассчитайте необходимый объем</p>
 						<image id="img-btn" src="img/blockThreed/btn.png"></image>
-					</button>
+					</button></a>
 				</div>
 				<div id="blockRab">
 					<image src="img/blockThreed/rabbit.webp" width="200px"></image>
 					<h4>Гарантия качества ингредиентов</h4>
 					<p>Используем только качественное сырье от лучших отечественных и мировых поставщиков. В собственной лаборатории используем более 280 критериев для анализа качества входящего сырья и готовой продукции </p>
-					<button>
+					<a href="#blockFive"><button>
 						<image id="img-b" src="img/blockThreed/library.png"></image>
 						<p>Узнайте больше в нашей статье о производстве</p>
 						<image id="img-btn" src="img/blockThreed/btn.png"></image>
-					</button>
+					</button></a>
 				</div>
 				<div id="blockBirds">
 					<image src="img/blockThreed/chikens.webp" width="200px"></image>
@@ -436,7 +436,7 @@
 					  </p>
 				</div>
 			</div>
-			<div class="blockFour">
+			<div id="blockFour" class="blockFour">
 				<h1 class="nameBlock">Калькулятор корма</h1>
 				<p class="infoBlockFour">Выберите животное, введите количество голов и получите точный расчет количества корма,
 				 необходимого для вашего поголовья. Все просто.
@@ -533,7 +533,7 @@
 					<img id="imgFour" src="img/chickenN.png">
 				</div>
 			</div>
-			<div class="blockFive">
+			<div id="blockFive" class="blockFive">
 				<div class="sciencer">
 					 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="100%"
                                 id="blobSvg" style="opacity: 1;">
@@ -574,16 +574,27 @@
 						</div>
 						
 					</div>
-					<button class="mapHref">
+					<a href="#"><button class="mapHref">
 							<img src="img/world.png">
 							<p>На сайт Мегамикс</p>
 							<img class="mapBtn" src="img/blockThreed/btn.png">
-						</button>
+						</button></a>
 				</div>
 			</div>
 			<div>
+				<img src="">
+				<div style="margin-bottom: 50px; z-index: 2; position: relative;">
+					<select style="overflow: scroll;" name="" id="selectReg">
+						<option selected disabled>Выберите область</option>
+						<option value="Астрахань">Астраханская область</option>
+						<option value="Белгород">Белгородская область</option>
+						<option value="Брянск">Брянская область</option>
+					</select>
+				</div>
+				<div id="map">
+				</div>
 			</div>
-			<div class="blockSeven">
+			<div id="blockSeven" class="blockSeven">
 				<div class="headerBlock">
 					<h1>Полезные материалы</h1>
 					<p>Мы постоянно проводим научные изыскания, направленные на увеличение эффективности животноводства и птицеводства<br>
@@ -614,7 +625,7 @@
 					<h1>Витамины для кур-несушек</h1>
 					<p class="data">12 мая 2022</p>
 					<p class="clickbait">Витамины необходимы курам яичного направления для нормальной жизнедеятельности и увеличения продуктивного периода.</p>
-					<button class="article-btn">Читать дальше</button>
+					<a href="#"><button class="article-btn">Читать дальше</button></a>
 				</div>
 				<div id="science">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="120%"
@@ -671,15 +682,15 @@
 		<footer>
 			<div class="foot">
 				<div class="company">
-					<p class="nameComp">OOO «Мегамикс Комбикорм»</p>
-					<p>© 2010—2021</p>
+					<a href="#"><p class="nameComp">OOO «Мегамикс Комбикорм»</p></a>
+					<a href="#"><p>© 2010—2021</p></a>
 				</div>
 				<div class="correct">
-					<p>согласие на обработку персоналных данных</p>
+					<a href="#"><p>согласие на обработку персоналных данных</p></a>
 					<img src="img/blockThreed/btn.png">
 				</div>
 				<div class="social">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
+					<a href="#"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
                                 id="blobSvg" style="opacity: 1;">
                                     <path id="blob" fill="#F585A7" style="opacity: 1;">
                                         <animate attributeName="d" dur="31s" repeatCount="indefinite"
@@ -687,8 +698,8 @@
                                         </animate>
                                     </path>
                                </svg>
-					<img style="margin-left: 15px; margin-top: 5px;" src="img/mail.png">
-						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
+					<img style="margin-left: 15px; margin-top: 5px;" src="img/mail.png"></a>
+						<a href="#"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
                                 id="blobSvg" style="opacity: 1; margin-left: 70px;">
                                     <path id="blob" fill="#99E1EF" style="opacity: 1;">
                                         <animate attributeName="d" dur="31s" repeatCount="indefinite"
@@ -696,8 +707,8 @@
                                         </animate>
                                     </path>
                                </svg>
-					<img style="margin-left: 85px; margin-top: 5px;" src="img/telegram.png">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
+					<img style="margin-left: 85px; margin-top: 5px;" src="img/telegram.png"></a>
+					<a href="#"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
                                 id="blobSvg" style="opacity: 1;margin-left: 140px;">
                                     <path id="blob" fill="#8A9CC6" style="opacity: 1; ">
                                         <animate attributeName="d" dur="31s" repeatCount="indefinite"
@@ -705,8 +716,8 @@
                                         </animate>
                                     </path>
                                </svg>
-					<img style="margin-left: 155px; margin-top: 5px;" src="img/vk.png">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
+					<img style="margin-left: 155px; margin-top: 5px;" src="img/vk.png"></a>
+					<a href="#"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="2%"
                                 id="blobSvg" style="opacity: 1;margin-left: 210px;">
                                     <path id="blob" fill="#AA89C0" style="opacity: 1; ">
                                         <animate attributeName="d" dur="31s" repeatCount="indefinite"
@@ -714,7 +725,7 @@
                                         </animate>
                                     </path>
                                </svg>
-					<img style="margin-left: 225px;" src="img/tiktok.png">
+					<img style="margin-left: 225px;" src="img/tiktok.png"></a>
 				</div>
 			</div>
 		</footer>
@@ -724,6 +735,10 @@
 		<script src="mobileSel.js"></script>
 		<script src="mobileBlockThreed.js"></script>
 		<script src="mobile-article.js"></script>
+		<script src="selNav.js"></script>
+		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=47728c8f-e493-45e0-ad67-ea7dbf3a07f8" type="text/javascript"></script>
+		<script src="map.js" type="text/javascript"></script>
+    	<script src="icon_map.js" type="text/javascript"></script>
 		<!--<script src="mouse.js"></script>-->
 	</body>
 </html>
